--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -29,8 +29,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Clarence Taylor</span>
-                <span class="d-none d-lg-block"><img src="img/150896353_196984201808632_1139578965624618357_n.jpg"
-                                                     height="200" width="215"/></span>
+                <span class="d-none d-lg-block"><img src="img/150896353_196984201808632_1139578965624618357_n.jpg" height="200" width="215"/>
+                </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
