增新一篇文章

--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -55,7 +55,7 @@
                         個人文章存放庫，歡迎交流。
                         <a href="36845220@gmail.com">a36845220@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5"></p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -68,12 +68,29 @@
             <!-- Experience-->
             <section class="resume-section" id="original">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">原創</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
+                            <div class="subheading mb-3"></div>
+                            <br>
+                            <p>喜歡海，是深層內裡，像藍綠色墨水又或更加晦暗的世界給予的溫柔，無條件擁抱一切，那般胸襟，寧靜的令人心安；若載浮載沉，也依然有著被陽光洗禮的權利，因經由淺海，強烈的照耀會在收斂後溫和，感受十分舒適，所以為此眷戀而沉溺。</p>
+                            <p>這樣的喜愛不為過吧？我想。</p>
+                            <p>蠢蠢欲動的欲望，嚮往的心，促使著訴說，便將話語藏在海螺投向汪洋。蠢蠢欲動的情感，躁動的心，催化思慮始終，什麼扯出了，而什麼早已吞下，如浪卷去的沙粒不再歸來。</p>
+                            <br>
+                            <br>
+                            <p>──關於愛慕、夙願和現實的結局。</p>
+                            <br>
+                            <br>
+                            <p>永遠無法與你感同深受，云云著實悲傷的事。意識到時，淚腺壓迫許久難受，儘管反覆吞嚥喘息，試圖驅走異樣，酸澀於眼角擴散，還是不敵濕熱浸染，泣至咽喉乾竭嘶啞。該怎麼做、該怎麼辦，徬徨的此刻那廂，餘暉下的岸仍舊波瀾輕盈，晶瑩剔透，偶爾發出水花濺起的好聽聲音。彷彿眼見景致，閉闔羽睫，最後拭淨破碎光采。</p>
+                            <p>當日直到疲憊入睡，總覺得明天、後天，也許一個星期一個月，自己仍會出現在那吧。</p>
+                            <br>
+                            <br>
+                            <p>-&nbsp; 守望者的情書&nbsp; -<p/>
+                            <p>自始做著成為深海魚的夢，至終骨肉粉碎，在洋流消融，滋養，完整。<p/>
+                            <p>海螺裡的留言是：請別忘記我。</p>
+                            <br>
+                            <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
