--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -74,6 +74,7 @@
                             <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
                             <div class="subheading mb-3"></div>
                             <br>
+                            <br>
                             <p>喜歡海，是深層內裡，像藍綠色墨水又或更加晦暗的世界給予的溫柔，無條件擁抱一切，那般胸襟，寧靜的令人心安；若載浮載沉，也依然有著被陽光洗禮的權利，因經由淺海，強烈的照耀會在收斂後溫和，感受十分舒適，所以為此眷戀而沉溺。</p>
                             <p>這樣的喜愛不為過吧？我想。</p>
                             <p>蠢蠢欲動的欲望，嚮往的心，促使著訴說，便將話語藏在海螺投向汪洋。蠢蠢欲動的情感，躁動的心，催化思慮始終，什麼扯出了，而什麼早已吞下，如浪卷去的沙粒不再歸來。</p>
@@ -86,45 +87,53 @@
                             <p>當日直到疲憊入睡，總覺得明天、後天，也許一個星期一個月，自己仍會出現在那吧。</p>
                             <br>
                             <br>
+                            <br>
                             <p>-&nbsp; 守望者的情書&nbsp; -<p/>
                             <p>自始做著成為深海魚的夢，至終骨肉粉碎，在洋流消融，滋養，完整。<p/>
                             <p>海螺裡的留言是：請別忘記我。</p>
                             <br>
                             <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;February 2021 2.28</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0"></h3>
+                            <div class="subheading mb-3"></div>
+                            <p>星在浩瀚宇宙旅行，穿越連光速也不及盡頭的時空，數億年，劃破天際，冷冽光彩如史詩般無比壯麗，卻誰也沒料想到的，它的終末，選擇歸屬在微不足道的人類身邊。</p>
+                            <br>
+                            <p>「......為什麼呢？</p>
+                            <br>
+                            <p>就算詢問，它也只是憑藉不可名狀型態，感覺上像是輕淺地揚起唇角，姿態搖曳似說著這裡比較好的樣子，自顧自的留栖了。說到底，星是什麼概念也不清楚，它是抹光，理應要亮到刺眼，但在感受過僅油燈般的柔和，並沒有預想的失控而鬆一口氣，普通地慶幸片刻。</p>
+                            <p>就此，夜晚變得可見。因看清陳列床頭的大小事物，貼牆日常提醒的紙條，櫃上玻璃缸裡悠遊的魚和海草，那人不禁低吟著笑出聲，波動比漣漪還細微的氣息，以此表露滿溢而出的喜悅。嘛、一點照明就能如此熱鬧，從來沒想過。</p>
+                            <br>
+                            <p>他伸出手，攬過它，道出感謝。<p/>
+                            <p>燃燒著很累吧，又接著說，辛苦了。</p>
+                            <br>
+                            <p>捧的手形築成它休憩之居，掌心被鍍上星河的銀，由裏至外輝暈淡然渙散，冥冥之中逐漸溫煦，指隙間流露鵝黃色的光線，強度在減弱，不過星依舊有著暖意，雖剩星火的模樣，色澤仍堪比童話裡那最豐盛的餐桌所裝飾的燭台。我聽見了，星像是在這麼回覆。</p>
+                            <br>
+                            <br>
+                            <p>我也想謝謝你，謝謝你願意這麼對我說。</p>
+                            <p>休息，都休息啦。 互相依偎的存在，祈禱無夢。</p>
+                            <br>
+                            <br>
+                            <br>
+                            <p>--&nbsp;生存意義-&nbsp;-<p/>
+                            <p>做夢了嗎？那做了什麼夢呢，我啊，明明當初很清楚但醒來就都忘了<p/>
+                            <p>，連同你存在過這件事，都變得透明。</p>
+                            <br>
+                            <br>
+                            <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
+                        <div class="flex-shrink-0"><span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;March 2021 3.28</span></div>
+
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="derivative">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">二創</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Colorado Boulder</h3>
