--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -126,6 +126,44 @@
                             <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;March 2021 3.28</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"></h3>
+                            <div class="subheading mb-3"></div>
+                        <br>
+                        <br>
+                        <p>──紅色的金魚很漂亮，跟小孩觀點如出一轍，卻無法以相同的方式去愛牠。</p>
+                        <br>
+                        <br>
+                        <p>我們近乎同時向長方型的塑料裝箱投去目光。澄澈的瞳眸凝視，深邃的瞳眸低垂，移時同向老闆遞交零錢，換得鋪上薄紙的捕魚網。我看男孩，小小的手心抓緊藍色的柄，被魚群弄一陣慌的模樣很逗趣，偶爾得逞，會狡黠地咧嘴笑，在任由鮮豔瑰麗的紅撲騰後逃逸。</p>
+                        <br>
+                        <p>我一度認為自己也能很輕易。</p
+                        <br>
+                        <p>不乏捕捉技巧，肯定過會兒就得手，事實也的確如此。為不使其痛苦，麻俐地安置水桶之中，沒法放手所以帶回了家。拿過擦拭通透的玻璃水缸，整一面細潤石子地，粉嫩貝殼點綴，在放入精雕細琢的城堡模型，注水打氧，終作佳人居所。</p>
+                        <br>
+                        <br>
+                        <p>公主，我希望妳能幸福。</p>
+                        <br>
+                        <br>
+                        <p>期待著某個時刻，她會恣意搖曳魚鰭，猶如圓舞曲間翩翩飛舞的裙擺，舒展如牡丹齊開燦爛，放縱風姿綽約。若他人羡豔那在好不過，便意味妳的身價我的付出擁有世間定義，他們總說：「你做了許多。」有表現肯定、鼓勵，難以置信也不在少數，疑惑亦同。</p>
+                        <br>
+                        <br>
+                        <p>「公主，妳幸福嗎？」</p>
+                        <br>
+                        <br>
+                        <p>倒頭來我仍會詢問妳的心之所向，即使回應不過藏匿堡壘的一抹側影。從未酬對，也未求，擅自思慮此刻將來，但不強迫，或許連妳都不曾在乎的死，終究獨留我愴然涕下。</p>
+                        <br>
+                        <br>
+                        <br>
+                        <p>-&nbsp;調停者&nbsp;-<p/>
+                        <p>盲目的追求誰的美好結局。</p>
+                        <p>不求回報的感情偶爾也會迷失。你在我身邊幸福嗎？幾度欲言，可沒有勇氣，畢竟自願者不得存在怨，也害怕著，被拒絕的事。</p>
+                            <br>
+                            <br>
+                            <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;December 2021 12.21</span></div>
 
                 </div>
             </section>
