--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -51,8 +51,8 @@
                         花
                         <span class="text-primary">クッキ</span>
                     </h1>
-                    <div class="subheading mb-5">
-                        個人文章存放庫，歡迎交流。
+                    <div class="subheading mb-3">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;短文選手的個人文章存放庫，歡迎交流。
                         <a href="36845220@gmail.com">a36845220@gmail.com</a>
                     </div>
                     <p class="lead mb-5"></p>
