文章內容設置完畢

--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -94,7 +94,7 @@
                             <br>
                             <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;February 2021 2.28</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;2021 2.28</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -125,7 +125,7 @@
                             <br>
                             <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;March 2021 3.28</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;2021 3.28</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -163,7 +163,7 @@
                             <br>
                             <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">&nbsp;&nbsp;&nbsp;&nbsp;December 2021 12.21</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">&nbsp;2021 12.21</span></div>
 
                 </div>
             </section>
@@ -174,20 +174,74 @@
                     <h2 class="mb-5">二創</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                            <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
+                            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                                <div class="flex-grow-1">
+                                    <h3 class="mb-0"></h3>
+                                    <div class="subheading mb-3"></div>
+                                    <br>
+                                    <br>
+                                    <p>踏上被海水打濕而變得細軟的沙灘，雨依如花絮飄落，滴在臉龐微地沁人，遙見的身影望向汪洋像在思索，移時回首相視，便立馬奔了起來。那人在沙地印著一個又個淺淺足跡，跑的速度似乎挺快，衣擺隨動作大幅搖曳著，髮絲憑風恣意於空中紛飛，白至剔透的色澤，使他在雲層晦暗的照明之下也渙散著柔和的光芒，在天海一色間變得迷離。</p>
+                                    <br>
+                                    <p>對方花了點時間來到自己面前，衣衫不整，喘息的呼吸凌亂，唇揚的弧度卻非常美好。</p>
+                                    <br>
+                                    <br>
+                                    <p>看上去非常開心。</p
+                                    <br>
+                                    <br>
+                                    <p>我們既是“家人”，也是“同伴”，甚可稱“愛慕者”。</p>
+                                    <p>擁有相同的眸色，相似的遭遇，卻來自不同地方。習得不一的事物，卻是志同嚮往。分明相對的性格，卻能在彼此身上找尋相似之處，不禁依賴，宛若被命運繾綣的靈魂。</p>
+                                    <p>一陣浪花太短，四季便是延綿不絕，在他成年不久的日子，就似流連他本人的純粹色調，安靜地逝去，連同那份柔軟、悲傷與喜悅，獨留一人沉溺在這漫長時日。</p>
+                                    <br>
+                                    <br>
+                                    <p>我應如何將你喚回</p>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <p>- 黑與白色的紀錄 -</p>
+                                    <br>
+                                    <p>1.</p>
+                                    <p>「......你又哭了嗎？」
+                                        擁有一頭烏黑髮絲的少年，佇立於年齡相仿的白髮少年之前，他輕聲詢問。
+                                        已經好幾次目睹了這般情形，對方大概是感性相當，幾乎任何事情，都能使他淚珠輕易地流落，其中卻從不曾只為悲傷，還有著與水光氾濫交織的釋然，在垂絲間隱現。當第一次向他伸手時，注目便被宛若埋藏微曦的瀲灩深刻吸引，既往淡漠的神情瞠目
+                                        ──似乎能夠了解，感覺能被理解，這便是彼此的相遇和結識。<p/>
+                                    <br>
+                                    <br>
+                                    <p>2.</p>
+                                    <p>卻在身為平凡人的拜耶爾，逐漸能看見奇怪的事物伊始，他才稍微窺探到白髮少年的身世。
+                                        名無律，是擁有特殊靈力的人類，可以跟妖靈交流，職責是淨化塵世受怨所困的妖與靈，自己也許多少被影響到了。聽上去跟自己截然的世界觀，怕也管不上什麼，不過他開心就好，畢竟是說過想要守護妖怪的符咒師，若也樂意與這樣的神奇生物交流，那便好。</p>
+                                    <br>
+                                    <br>
+                                    <p>3.</p>
+                                    <p>兩人的相處，讓空泛的日子變得豐富，只不過他仍舊愛哭，但這點並不改變什麼。</p>
+                                    <br>
+                                    <br>
+                                    <p>4.</p>
+                                    <p>可突然有天，就不在回來了。<p/>
+                                    <br>
+                                    <br>
+                                    <p>5.</p>
+                                    <p>難以接受事實的拜耶爾自然調查起此事，讀過無律的日記，和他相依親人促膝長談，甚至靠些許打聽，上門拜訪他的導師。據描述，那時他的靈力比以往躁動許多，取出的咒符閃爍相較既往強烈紅芒，兩者呼應瞬發龐大的能量，揚其風波。</p>
+                                    <p>淨化成功，不幸犧牲，但他說過：「這個妖怪很可憐，必須幫助他。」帶著滿足離去。</p>
+                                    <br>
+                                    <br>
+                                    <p>6.</p>
+                                    <p>既然是無律的意思，那也無法再說什麼了。<p/>
+                                    <p></p>臨走前，他帶走他僅留下的和傘。</p>
+                                    <br>
+                                    <br>
+                                    <p>7.</p>
+                                    <p>陽光照在遠去背影，離開原來角度，於是世界又再次沉溺在漫長雨季。迷惘、憂慮、憤怒、沉默，自傘柄流入心臟一股暖意，拜耶爾選擇繼承他的意志，可終究是私慾作祟。</p>
+                                    <p>「為了不遺忘你的溫度，我會步入你所處的世界裏，完成你的夢想。」</p>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"> 2021.11.28</span></div>
                     </div>
                 </div>
             </section>
@@ -195,54 +249,58 @@
             <!-- Skills-->
             <section class="resume-section" id="diary">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            <hr class="m-0" />
+                    <h2 class="mb-5">隨記</h2>
+                    <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+                <h3 class="mb-0"></h3>
+                <div class="subheading mb-3"></div>
+                <br>
+                <br>
+                <p>2021.10.5</p>
+                <p>十月，仰望湛藍天色，仍然惦念溜走的記憶，像喝過透清涼的汽水，佇立海風間的白色風車，或某些片刻綻放的笑靨，它們藏在雜草叢生的另一端，順著潮汐變得澄澈，於橘黃的夕落只見邊緣光澤，化成泡泡奔向自由懷抱。
+                    沙灘的盡頭，顧望有誰靜待著與那些輕飄的東西擦肩而過，似乎尋找甚麼，可能是一句話、一個消息......不曉得，他轉身後，雖然看不清臉，背光的樣子使其漆黑的猶若剪影，但站立姿態直挺，僅此、明白了對方正面對著自己。
+                    雲逐漸覆蓋光，視界染遍紫紅，風喧囂的凌亂髮絲，沙塵捲一身，鹹苦的氣息殘留久久未離。
+                    我決定去見他，為他點燃小小的線香花火。</p
+                <br>
+                <span class="d-none d-lg-block"><img src="img/20210906_181627.jpg" height="500" width="1000"/>
+                <br>
+                <br>
+                <br>
+                    <p>2022.1.1</p>
+                    <p>濃夜裡星子明光爍亮，覆滿晶瑩白雪的原野閑靜，唯獨柴火劈啪作響的一方天地，誰切開了以吐司為上下夾層的蘋果派，金色果醬緩緩溢流；啜飲浸入蜂蜜的熱紅茶，氤氳繚繞，消逝。</p>
+                    <p>空氣再次清澈地冰冷，清晰能見是一雙看著你的眸，他老神在在地拿著蕃薯喵喵喵。</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.°<p/>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*<p/>
+         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;°</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.    *<P/>
+                    <p>「Merry Christmas and happy new year♪」</p>
+
+         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;°</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.    *<P/>
+                    <img src="img/0abfd31254d0cd19076c0f2a1fed1120.gif" height="427" width="497"/>
+                    <br>
+                    <br>
+                    <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
+
             <!-- Interests-->
             <section class="resume-section" id="database">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <h2 class="mb-5">素材庫</h2>
+
+                    <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
+                    <p>圖原<p/>
+                    <p>2022.1.1貓咪動圖：https://clickme.net/44252<p/>
+                    <br>
+                    <br>
+                    <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
+                    
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-
     </body>
 </html>
