存檔就出現了但不曉得甚麼的東西

--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -250,6 +250,8 @@
             <section class="resume-section" id="diary">
                 <div class="resume-section-content">
                     <h2 class="mb-5">隨記</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                     <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
@@ -297,7 +299,7 @@
                     <br>
                     <br>
                     <h3 class="mb-0">---------  ---------  ---------  ---------</h3>
-                    
+
                 </div>
             </section>
             <hr class="m-0" />
